--- a/templates/parciais/_tabela.html
+++ b/templates/parciais/_tabela.html
@@ -8,7 +8,7 @@
             <th></th>
         </tr>
         {% for tf in tarefa %}
-       '     <tr>
+            <tr>
                 <th><a href="#">{{tf.titulo}}</a></th>
                 <th>
                     <p>{{tf.descricao}}</p>
@@ -16,10 +16,10 @@
                 <th>{{tf.dataEntrada}} </th>
                 <th>{{tf.status}}</th>
                 <th>
-                    <a href="#"><i class="fa-solid fa-check"></i></a>
+                    <a href="{% url 'mudarStatus' tf.id %}"><i class="fa-solid fa-check"></i></a>
                     <a href="#"><i class="fa-regular fa-pen-to-square"></i></a>
-                    <a href="#"><i class="fa-solid fa-trash-can"></i></a>
-                </th>'
+                    <a href="{% url 'deletar' tf.id %}"><i class="fa-solid fa-trash-can"></i></a>
+                </th>
              </tr>
         {% endfor %}
     </table>
