--- a/templates/parciais/_tabela.html
+++ b/templates/parciais/_tabela.html
@@ -17,7 +17,7 @@
                 <th>{{tf.status}}</th>
                 <th>
                     <a href="{% url 'mudarStatus' tf.id %}"><i class="fa-solid fa-check"></i></a>
-                    <a href="#"><i class="fa-regular fa-pen-to-square"></i></a>
+                    <a href="{% url 'editar' tf.id %}"><i class="fa-regular fa-pen-to-square"></i></a>
                     <a href="{% url 'deletar' tf.id %}"><i class="fa-solid fa-trash-can"></i></a>
                 </th>
              </tr>
